src/objects/Transaction_Enteries__c/Transaction_Enteries__c.object-meta.xml
<CustomObject>
    <label>Transaction Entry</label>
    <nameField>
        <label>Transaction Enteries Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>