src/objects/Transaction_Enteries__c/fields/TX_Entry_Name__c.field-meta.xml
<CustomField>
    <fullName>TX_Entry_Name__c</fullName>
    <displayFormat>TX-{00000}</displayFormat>
    <label>TX Entry Name</label>
    <type>AutoNumber</type>
</CustomField>