src/objects/Transaction_Enteries__c/validationRules/Contact_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Contact_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Contact__r.Status__c , &apos;Inactive&apos;)</errorConditionFormula>
    <errorMessage>Contact Deactivated,Transaction Can&apos;t Be Created Under It</errorMessage>
</ValidationRule>