src/objects/Transaction_Enteries__c/validationRules/Minimum_Balance_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Minimum_Balance_Required</fullName>
    <active>true</active>
    <errorConditionFormula>Contact__r.Available_Balance__c  -   Amount__c   &lt; 3000  &amp;&amp;   ISPICKVAL( Type__c , &apos;Debit&apos;)</errorConditionFormula>
    <errorMessage>Does Not Have Enough Balance</errorMessage>
</ValidationRule>